--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -1,14 +1,10 @@
-.input-text{
-    margin: 24px 0;
-}
-
-.input-text label{
+.drop-down label{
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
 }
 
-.input-text input{
+.drop-down select{
     background-color: #fff;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
